# freesaurus

./: .gitignore  docker-compose.dev.yml  justfile
.github/workflows/: deploy.yml
scripts/: init-deployment.sh
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/templates/: cloud-init.yml  docker-compose.yml.tpl  env.tpl  nginx.conf.tpl
thesaurus-api/: .env  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.dev.yml
thesaurus-api/migrations/: 20250316000001_create_users_table.sql  20250316000002_create_user_sessions_table.sql  20250316000003_create-user-favourites-table.sql  20250316000004_create-activities-table.sql
thesaurus-api/src/: Dockerfile.dev  config.rs  error.rs  main.rs
thesaurus-api/src/db/: mod.rs  postgres.rs
thesaurus-api/src/middleware/: auth.rs
thesaurus-api/src/models/: mod.rs  user.rs  word.rs
thesaurus-api/src/routes/: activities.rs  auth.rs  favorites.rs  health.rs  mod.rs  thesaurus.rs
thesaurus-api/src/services/: activity.rs  auth.rs  mod.rs  search.rs
thesaurus-frontend/: Dockerfile  capacitor.config.ts  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
thesaurus-frontend/ios/App/App/: Info.plist
thesaurus-frontend/ios/App/App.xcodeproj/: project.pbxproj
thesaurus-frontend/public/: manifest.json  service-worker.js
thesaurus-frontend/src/: App.tsx  index.tsx  routes.tsx  serviceWorkerRegistration.ts
thesaurus-frontend/src-tauri/: Cargo.toml  tauri.conf.json
thesaurus-frontend/src-tauri/src/: main.rs
thesaurus-frontend/src/api/: authApi.ts  axiosConfig.ts  thesaurusApi.ts
thesaurus-frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
thesaurus-frontend/src/contexts/: AuthContext.tsx
thesaurus-frontend/src/hooks/: useThesaurusQueries.ts
thesaurus-frontend/src/pages/: HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  RegisterPage.tsx  WordPage.tsx
thesaurus-frontend/src/styles/: global.css  theme.ts
thesaurus-frontend/src/types/: auth.types.ts  index.ts  thesaurus.types.ts
thesaurus-frontend/src/utils/: formatters.ts  platform.ts  storage.ts  userDataDb.ts  validators.ts
wordnet-importer/: Cargo.toml  Dockerfile
wordnet-importer/src/: main.rs  models.rs  parser.rs  transform.rs
(+15 files in other folders)
