[package]
name = "wordnet-importer"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to import Open English WordNet data into Meilisearch"

[dependencies]
# CLI
clap = { version = "4.5.1", features = ["derive", "env"] }

# XML parsing
quick-xml = "0.37.2"
roxmltree = "0.20.0"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Async runtime
tokio = { version = "1.34.0", features = ["full"] }
rayon = "1.10.0"
# HTTP client
reqwest = { version = "0.11.22", features = ["json", "stream"] }
futures-util = "0.3.29"

# Error handling
anyhow = "1.0.75"

# File handling
tempfile = "3.8.1"

# Progress bar
indicatif = "0.17.7"

# Regex
regex = "1.10.2"

# URL parsing
url = "2.5.0"
flate2 = "1.1.0"

meilisearch-sdk = "0.24.3"
